k8s/nginx-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
  namespace: default
  labels:
    app: nginx-test
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: default
  labels:
    app: nginx-test
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-test
