k8s/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liatrio-demo-api-pod
  namespace: default
  labels:
    app: liatrio-demo-api
spec:
  containers:
  - name: api
    image: IMAGE_URI_PLACEHOLDER
    ports:
    - containerPort: 8080
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: liatrio-demo-api-pod-service
  namespace: default
  labels:
    app: liatrio-demo-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: liatrio-demo-api
